Change concurrency group value to a string instead of a variable

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
     types: [ opened, synchronize, reopened ]
 
 concurrency:
-  group: ${{ github.head_ref }}
+  group: ci-pipeline
   cancel-in-progress: true
 
 jobs:
