--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=backend
 spring.data.mongodb.uri=${MONGODB_URI}
 spring.data.mongodb.database=TicketScout
+
+spring.security.oauth2.client.registration.github.client-id=${OATUH_GITHUB_ID}
+spring.security.oauth2.client.registration.github.client-secret=${OATUH_GITHUB_SECRET}
+spring.security.oauth2.client.registration.github.scope=none
+app.url=${APP_URL}
