--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>de.flapdoodle.embed</groupId>
+            <artifactId>de.flapdoodle.embed.mongo.spring3x</artifactId>
+            <version>4.13.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
