--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  prettier-check:
+  frontend-check:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -22,15 +22,18 @@ jobs:
           cache: 'npm'
           cache-dependency-path: 'frontend/package-lock.json'
       - name: Install dependencies
-        run: npm install
         working-directory: frontend
+        run: npm install
       - name: Run Prettier check
         run: npx prettier ./frontend/src -c
+      - name: Run build frontend
+        working-directory: frontend
+        run: npm run build
 
   maven-package:
     environment: production
     runs-on: ubuntu-latest
-    needs: [ prettier-check ]
+    needs: [ frontend-check ]
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK 22
