--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,8 @@ name: CI-Pipeline
 
 on:
   push:
+    branches-ignore:
+      - main
   pull_request:
     types: [ opened, synchronize, reopened ]
 
