Add vector search backend

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.security.oauth2.client.registration.github.client-id=${OATUH_GITHUB_ID}
 spring.security.oauth2.client.registration.github.client-secret=${OATUH_GITHUB_SECRET}
 spring.security.oauth2.client.registration.github.scope=none
 app.url=${APP_URL}
+
+app.openai-embedding-baseUrl=${OPENAI_EMBEDDING_BASE_URL}
+app.openai-api-key=${OPENAI_API_KEY}
