--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -4,3 +4,6 @@ spring.security.oauth2.client.registration.github.client-id="test-id"
 spring.security.oauth2.client.registration.github.client-secret="test-secret"
 spring.security.oauth2.client.registration.github.scope=none
 app.url=http://localhost:5173
+
+app.openai-embedding-baseUrl="test-url"
+app.openai-api-key="test-key"
