--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -17,6 +17,7 @@
         <sonar.organization>jonashonecker</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <java.version>22</java.version>
+        <mongodb.version>4.11.0</mongodb.version>
     </properties>
     <dependencies>
         <dependency>
@@ -59,6 +60,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>mockwebserver</artifactId>
+            <version>4.9.1</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
