Refactored vector search backend

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,3 +9,6 @@ app.url=${APP_URL}
 
 app.openai-embedding-baseUrl=${OPENAI_EMBEDDING_BASE_URL}
 app.openai-api-key=${OPENAI_API_KEY}
+
+vectorSearch.index.name=vector_index_titleAndDescription
+vectorSearch.index.fieldPath=titleAndDescriptionEmbedding
