Fixed Tests to run properly after adding vector search

--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -1,9 +1,13 @@
 de.flapdoodle.mongodb.embedded.version=7.0.4
 
-spring.security.oauth2.client.registration.github.client-id="test-id"
-spring.security.oauth2.client.registration.github.client-secret="test-secret"
+spring.data.mongodb.database=TicketScout
+spring.security.oauth2.client.registration.github.client-id=test-id
+spring.security.oauth2.client.registration.github.client-secret=test-secret
 spring.security.oauth2.client.registration.github.scope=none
 app.url=http://localhost:5173
 
-app.openai-embedding-baseUrl="test-url"
-app.openai-api-key="test-key"
+app.openai-embedding-baseUrl=test-url
+app.openai-api-key=test-key
+
+vectorSearch.index.name=vector_index_titleAndDescription
+vectorSearch.index.fieldPath=titleAndDescriptionEmbedding
