Feature/31 add vector search (#32)
* add vector search and tests
* add api request limit per user
* add tests for limiter
* add validation and tests for title and description max length

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,3 +6,24 @@ spring.security.oauth2.client.registration.github.client-id=${OATUH_GITHUB_ID}
 spring.security.oauth2.client.registration.github.client-secret=${OATUH_GITHUB_SECRET}
 spring.security.oauth2.client.registration.github.scope=none
 app.url=${APP_URL}
+
+app.openai-embedding-baseUrl=${OPENAI_EMBEDDING_BASE_URL}
+app.openai-api-key=${OPENAI_API_KEY}
+
+vectorSearch.index.name=vector_index_titleAndDescription
+vectorSearch.index.fieldPath=titleAndDescriptionEmbedding
+
+spring.cache.type=jcache
+spring.cache.jcache.provider=com.hazelcast.cache.impl.HazelcastServerCachingProvider
+spring.main.allow-bean-definition-overriding=true
+
+bucket4j.enabled=true
+bucket4j.filters[0].filter-order=1
+bucket4j.filters[0].cache-name=buckets
+bucket4j.filters[0].url=/api/ticket.*
+bucket4j.filters[0].http-response-body={"status": 429, "error": "Too Many Requests, you have exhausted your API Request Quota"}
+bucket4j.filters[0].rate-limits[0].cache-key=@userService.getUsername()
+bucket4j.filters[0].rate-limits[0].bandwidths[0].capacity=100
+bucket4j.filters[0].rate-limits[0].bandwidths[0].time=60
+bucket4j.filters[0].rate-limits[0].bandwidths[0].unit=minutes
+bucket4j.filters[0].rate-limits[0].bandwidths[0].refill-speed=interval
