--- a/backend/src/test/resources/application.properties
+++ b/backend/src/test/resources/application.properties
@@ -1,6 +1,28 @@
 de.flapdoodle.mongodb.embedded.version=7.0.4
 
-spring.security.oauth2.client.registration.github.client-id="test-id"
-spring.security.oauth2.client.registration.github.client-secret="test-secret"
+spring.data.mongodb.database=TicketScout
+spring.security.oauth2.client.registration.github.client-id=test-id
+spring.security.oauth2.client.registration.github.client-secret=test-secret
 spring.security.oauth2.client.registration.github.scope=none
 app.url=http://localhost:5173
+
+app.openai-embedding-baseUrl=test-url
+app.openai-api-key=test-key
+
+vectorSearch.index.name=vector_index_titleAndDescription
+vectorSearch.index.fieldPath=titleAndDescriptionEmbedding
+
+spring.cache.type=jcache
+spring.cache.jcache.provider=com.hazelcast.cache.impl.HazelcastServerCachingProvider
+spring.main.allow-bean-definition-overriding=true
+
+bucket4j.enabled=true
+bucket4j.filters[0].filter-order=1
+bucket4j.filters[0].cache-name=buckets
+bucket4j.filters[0].url=/api/ticket.*
+bucket4j.filters[0].http-response-body={"status": 429, "error": "Too Many Requests, you have exhausted your API Request Quota"}
+bucket4j.filters[0].rate-limits[0].cache-key=@userService.getUsername()
+bucket4j.filters[0].rate-limits[0].bandwidths[0].capacity=100
+bucket4j.filters[0].rate-limits[0].bandwidths[0].time=60
+bucket4j.filters[0].rate-limits[0].bandwidths[0].unit=minutes
+bucket4j.filters[0].rate-limits[0].bandwidths[0].refill-speed=interval
